android.permission.FOREGROUND_SERVICE_SPECIAL_USE

--- a/plugin.xml
+++ b/plugin.xml
@@ -39,7 +39,7 @@
                 android:name="com.vayapedal.alwaystop.ServiceLauncher"
                 android:enabled="true"
                 android:exported="false"
-                android:foregroundServiceType="mediaProjection" />
+                android:foregroundServiceType="specialUse"/>
         </config-file>
 
 
@@ -60,6 +60,7 @@
             <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
             <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
             <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
+            <uses-permission android:name="android.permission.FOREGROUND_SERVICE_SPECIAL_USE" />
         </config-file>
 
         <source-file src="src/android/AlwaysTop.java"
