--- a/plugin.xml
+++ b/plugin.xml
@@ -2,7 +2,7 @@
 <plugin xmlns="http://www.phonegap.com/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
     id="cordova-plugin-alwaystop"
-    version="1.0.0">
+    version="1.0.3">
 
     <name>alwaystop</name>
 
@@ -13,7 +13,7 @@
     <repo>https://github.com/cocodintechnology/cordova-plugin-alwaystop</repo>
     <license>Apache 2.0</license>
 
-    <author>Diego Santiago Lijó</author>
+    <author>AVA SOLUCIONES TECNOLÓGICAS</author>
 
     <engines>
         <engine name="cordova" version=">=3.0.0" />
